@@ -11,6 +11,10 @@ Package author: Andy Salnikov
 Please describe any modifications that you made to the package in the
 reverse time order.
 
+Tag: V00-00-10
+2012-07-24 Joseph Barrera
+- fix unsigned conversion warnings
+
 Tag: V00-00-09
 2012-06-08 Joseph Barrera
 - allow options to have empty string as value, e.g. {inputdark =} and {outputfile =}
